chore: Updated version, maven repo, and spigot version

--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,12 @@
 
     <repositories>
         <repository>
-            <id>bs-public</id>
-            <url>https://repo.pluginwiki.us/repository/maven-releases/</url>
+            <id>bs-repo-releases</id>
+            <url>https://repo.bsdevelopment.org/releases</url>
         </repository>
         <repository>
-            <id>bs-nms</id>
-            <url>https://repo.pluginwiki.us/repository/nms/</url>
+            <id>bs-repo-nms</id>
+            <url>https://repo.bsdevelopment.org/nms</url>
         </repository>
         <repository>
             <id>jitpack.io</id>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.17-R0.1-SNAPSHOT</version>
+            <version>1.20-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>lib.brainsynder</groupId>
             <artifactId>API</artifactId>
-            <version>B101</version>
+            <version>B124</version>
         </dependency>
         <dependency>
             <groupId>com.github.TechFortress</groupId>
